--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,4 @@ backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#262730"
 font="sans serif"
+GEMINI_API_KEY="AIzaSyCGkhTKIy6emz83pWNMSAseHBt_l3jZnF8"
